# PEAR

./: .gitignore  CITATION.cff  Makefile  README.md  REPORT.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
archive/: README.md
archive/pear1/: README.md  __init__.py  __main__.py  analysis.py  config.py  constraints.txt  data.py  difficulty.py  doctor.py  model.py  probe.py  requirements.txt  run.py  scoring.py  setup_h100.sh  smoke.py  verifiers.py
archive/pear1/tests/: test_verifiers.py
archive/pear2/: __init__.py  __main__.py  calibrate.py  score.py
archive/pear3/: __init__.py  __main__.py
archive/pear4/: __init__.py  __main__.py  analyze.py  probe.py
archive/pear5/: README.md  __init__.py  __main__.py  analyze.py  calibrate.py  probe.py
archive/pear6/: README.md  __init__.py  __main__.py  analyze.py  probe.py  scoring.py
archive/seeing/: __init__.py  __main__.py  decompose.py
pear/: __init__.py  audit.py  cli.py  config.py  data.py  model.py  probe.py  score.py  verifiers.py  vest.py
proposal/: PROPOSAL.md  README.md
proposal/figures/: README.md
results/audits/: audit_2b_vs_9b.csv  audit_2b_vs_9b.txt  audit_e1_full_grid.csv  audit_e1_full_grid.txt  audit_e3_vgpo_chartqa.csv  audit_e3_vgpo_chartqa.txt
results/probes/: probe_qwen25vl_7b_base_chartqa.parquet  probe_qwen25vl_7b_vgpo_chartqa.parquet  probe_qwen35_2b_ai2d.parquet  probe_qwen35_2b_chartqa.parquet  probe_qwen35_2b_realworldqa.parquet  probe_qwen35_2b_textvqa.parquet  probe_qwen35_9b_ai2d.parquet  probe_qwen35_9b_chartqa.parquet  probe_qwen35_9b_realworldqa.parquet  probe_qwen35_9b_textvqa.parquet
results/vest/: vest_qwen25vl_7b_base_chartqa.txt  vest_qwen25vl_7b_vgpo_chartqa.txt  vest_qwen35_2b_ai2d.txt  vest_qwen35_2b_chartqa.txt  vest_qwen35_2b_realworldqa.txt  vest_qwen35_2b_textvqa.txt  vest_qwen35_9b_ai2d.txt  vest_qwen35_9b_realworldqa.txt  vest_qwen35_9b_textvqa.txt
scripts/: _style.py  make_figures.py  make_proposal_figures.py  run_e1_grid.sh  run_e3_audit.sh
tests/: test_audit.py  test_cli.py  test_verifiers.py  test_vest.py
